apps/sky-ledger-ui/overlays/qa/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sky-ledger-ui
spec:
  template:
    spec:
      containers:
        - name: sky-ledger-ui
          image: "ghcr.io/syntaxnow-labs/sky-ledger-ui:qa-latest"
