apps/sky-ledger-ui/overlays/qa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sky-ledger-ui-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/acme-http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - sky-ledger-ui-qa.syntaxnow.com
    secretName: sky-ledger-ui-qa-tls-cert
  rules:
  - host: sky-ledger-ui-qa.syntaxnow.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sky-ledger-ui
            port:
              number: 80
